--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://pbs.twimg.com/media/By1CsUzCYAAgai0?format=jpg&name=small" alt="Rodger Smoke"></td>
+      <td><img src="https://pbs.twimg.com/media/By1CsUzCYAAgai0?format=jpg&name=small" alt="cheese"></td>
       <td>
         <h1>Hackasnack</h1>
         <p><em>
@@ -19,7 +19,7 @@
         <p>
           The greatest programmer who ever lived.
           World renowend for his ability to solve any coding problem.
-          <a href="https://media4.giphy.com/media/r5H5p2Nl0E32o/giphy.gif?cid=790b7611be0c5394f399112238e0e24e0f619643a77dc4c9&rid=giphy.gif&ct=g">I got a business doing websites</a>
+          <a href="https://giphy.com/gifs/r5H5p2Nl0E32o/fullscreen">I got a business doing websites</a>
           When my friends need some code who do they call?
           I do HTML for them all
           Even make a homepage for my dog
