--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://pbs.twimg.com/media/By1CsUzCYAAgai0?format=jpg&name=small" alt="cheese"></td>
+      <td><img src="https://64.media.tumblr.com/76dfb3cfc6117bbda6d9242b78939ea6/tumblr_owl91kCRu01rge9rdo1_500.jpg" alt="cheese"></td>
       <td>
         <h1>Hackasnack</h1>
         <p><em>
