--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
     </p>
 
-  <form action="mailto:barrettw10@yahoo.com?subject=feedback" method="post" enctype="text/plain">
+  <form action="mailto:poptarts@hotmail.com?subject=feedback" method="post" enctype="text/plain">
     <label> Your Name:</label>
     <input type="text" name="yourName" value=""><br>
 
