--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Hackasnack</h1>
         <p><em>
-            Coder <strong>prodigy</strong> that's on the <strong>Mt Rushmore
+            Coding <strong>prodigy</strong> that's on the <strong>Mt Rushmore
             </strong> of coders.
           </em></p>
         <p>
