--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div style="background-color:#9ADCFF;">
 
- <body <!--style="background-color:#9ADCFF;"-->>
+ <body 
   <table cellspacing="20">
     <tr>
       <td>
